# refactor-platform-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.v2  Makefile  README.md  docker-compose.yaml  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build_and_deploy_containers.yml  ci.yml
api/: Cargo.toml
api/src/: lib.rs
database_management/: Cargo.toml
database_management/src/: cli.rs
docker/: Dockerfile-web
docs/db/: refactor_platform_rs.dbml
docs/runbooks/: Container-README.md  deploy.md  deploy_local.md
entity/: Cargo.toml  README.md
entity/src/: actions.rs  agreements.rs  coachees.rs  coaches.rs  coaching_relationship.rs  coaching_relationships.rs  coaching_sessions.rs  lib.rs  links.rs  mod.rs  notes.rs  organization.rs  organizations.rs  overarching_goals.rs  prelude.rs  seaql_migrations.rs  status.rs  user.rs  users.rs
entity_api/: Cargo.toml
entity_api/src/: action.rs  agreement.rs  coaching_relationship.rs  coaching_relationships.rs  coaching_session.rs  error.rs  lib.rs  note.rs  organization.rs  overarching_goal.rs  user.rs
migration/: Cargo.toml  Dockerfile
migration/src/: lib.rs  m20230930_182906_create_organizations.rs  m20230930_195750_coaching_relationships.rs  m20230930_200501_users.rs  m20240211_174355_base_migration.rs  refactor_platform_rs.sql  setup.sql  setup_default_user.sql
scripts/: rebuild_db.sh  rebuild_db_container.sh
service/: Cargo.toml  Dockerfile
service/src/: config.rs  lib.rs  logging.rs
src/: main.rs
src/scripts/: all_tests.rs
tests/: organization_index_test.rs
web/: Cargo.toml  Dockerfile
web/src/: custom_extractors.rs  error.rs  lib.rs  router.rs
web/src/controller/: action_controller.rs  agreement_controller.rs  coaching_relationship_controller.rs  coaching_relationships_controller.rs  coaching_session_controller.rs  mod.rs  note_controller.rs  organization_controller.rs  overarching_goal_controller.rs  user_controller.rs  user_session_controller.rs
web/src/controller/organization/: coaching_relationship_controller.rs  mod.rs
web/src/extractors/: authenticated_user.rs  compare_api_version.rs  mod.rs
web/src/protect/: actions.rs  coaching_relationships.rs  coaching_sessions.rs  mod.rs  overarching_goals.rs
