[package]
name = "refactor_platform_rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity_api", "entity", "migration", "web"]

[dependencies]
entity_api = { path = "entity_api" }
web = { path = "web" }
clap = { version = "4.4.6", features = ["cargo", "derive", "env"] }
tokio = "1.33.0"

