[package]
name = "refactor_platform_rs"
version = "0.1.0"
edition = "2021"

default-run = "refactor_platform_rs"

[workspace]
members = [".", "entity_api", "entity", "migration", "service", "web"]

[dependencies]
service = { path = "service" }
entity_api = {path = "entity_api" }
web = { path = "web" }

clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
log = "0.4"
simplelog = { version = "0.12", features = ["paris"] }
tokio = "1.40"

[[bin]]
name = "seed_db"
path = "src/bin/seed_db.rs"
