[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
axum-login = "0.12.0"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }
uuid = "1.7.0"

[dependencies.sea-orm]
version = "0.12"
features = [ "with-uuid" ]
