[package]
name = "entity_api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
entity = { path = "../entity" }
service = { path = "../service" }
serde_json = "1.0.107"
serde = { version = "1.0", features = ["derive"] }

log = "0.4.20"
axum-login = "0.16.0"
async-trait = "0.1.76"
password-auth = "1.0.0"
sqlx = { version = "0.8.2", features = ["time", "runtime-tokio"] }
sqlx-sqlite = { version = "0.8.2" }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }

[dependencies.sea-orm]
version = "1.1.0" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres"
]

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }

[features]
mock = ["sea-orm/mock"]

