[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sea-orm]
version = "0.12" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres"
]

[dependencies]
clap = { version = "4.4.6", features = ["cargo", "derive", "env"] }
log = "0.4"
serde_json = "1.0.107"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4.13"
