[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sea-orm]
version = "1.1.0" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-uuid"
]

[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
log = "0.4.22"
simplelog = { version = "0.12.2", features = ["paris"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["time", "runtime-tokio"] }
sqlx-sqlite = { version = "0.8.2" }
tokio = { version = "1.40", features = ["full"] }
tower = "0.4.13"
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid"] }
semver = { version = "1.0.22", features = ["serde"] }
